--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,9 +4,8 @@ body {
   width: 100vw;
   height: 100vh;
   background: black;
-  font-family: 'Roboto', 'Helvetica', sans-serif;
+  font-family: "Roboto", "Helvetica", sans-serif;
 }
-
 body canvas {
   position: absolute;
   top: 50%;
@@ -23,45 +22,25 @@ main {
   width: 50px;
   background: #171717;
 }
-
 main section {
   display: block;
   margin: 15px auto;
   width: 30px;
   height: 30px;
 }
-
-main .colors {
-  background: #171717;
-  border: 1px solid #F3F3F3;
-  position: relative;
-}
-
 main .colors .color-picker {
-  display: none;
-  width: 200px;
+  display: block;
+  width: 30px;
   height: 30px;
-  position: absolute;
-  top: 50%;
-  left: 30px;
-  transform: translateY(-50%);
+  padding: 0;
+  margin: 0;
 }
-
-main .colors .color-picker:focus {
-  display: block;
-}
-
-main .colors:hover .color-picker {
-  display: block;
-}
-
 main .thickness {
   position: relative;
   background-color: #F3F3F3;
 }
-
 main .thickness::after {
-  content: '';
+  content: "";
   position: absolute;
   left: 50%;
   top: 50%;
@@ -71,7 +50,6 @@ main .thickness::after {
   border-radius: 50%;
   background: #171717;
 }
-
 main .thickness .stroke-weight {
   display: none;
   position: absolute;
@@ -81,15 +59,12 @@ main .thickness .stroke-weight {
   top: 50%;
   transform: translateY(-50%);
 }
-
 main .thickness .stroke-weight:focus {
   display: block;
 }
-
 main .thickness:hover .stroke-weight {
   display: block;
 }
-
 main .button {
   display: block;
   width: 30px;
@@ -103,19 +78,15 @@ main .button {
   outline: none;
   cursor: pointer;
 }
-
 main .button img {
   max-width: 100%;
   max-height: 100%;
 }
-
 main .button.clear {
   font-size: 20px;
 }
-
 main .button.download img {
   max-width: 18px;
   max-height: 18px;
   transform: translate(6px, 6px);
-}
-/*# sourceMappingURL=main.min.css.map */
+}/*# sourceMappingURL=main.css.map */
