--- a/client/src/app.postcss
+++ b/client/src/app.postcss
@@ -4,15 +4,15 @@
 	/* Reference name */
 	font-family: 'Quicksand';
 	/* For multiple files use commas, ex: url(), url(), ... */
-	src: url('/fonts/Quicksand-Bold.ttf'), url('/fonts/Quicksand-Light.ttf'), url('/fonts/Quicksand-Medium.ttf'), url('/fonts/Quicksand.ttf'), url('/fonts/Quicksand-Regular.ttf'), url('/fonts/Quicksand-SenuBikd.ttf');
+	src: url('/fonts/Quicksand-Bold.ttf'), url('/fonts/Quicksand-Light.ttf'),
+		url('/fonts/Quicksand-Medium.ttf'), url('/fonts/Quicksand.ttf'),
+		url('/fonts/Quicksand-Regular.ttf'), url('/fonts/Quicksand-SenuBikd.ttf');
 }
-
 
 :root {
-    --theme-font-family-base: 'Quicksand', sans-serif;
-    --theme-font-family-heading: 'Quicksand', sans-serif;
-    /* ... */
+	--theme-font-family-base: 'Quicksand', sans-serif;
+	--theme-font-family-heading: 'Quicksand', sans-serif;
+	/* ... */
 }
-                        	
-							
+
 /* html, body { @apply h-full overflow-hidden; } */
